css/style.css
html,body {
    width: 100%;
    height: 100%;
    font-family: Verdana, sans-serif;
    font-size: 8pt;
}

body {
    background-color: #f1eee8;
}

#panel {
    position: fixed;
    top: 20px;
    right: 0px;
    width: 250px;
}

#map {
    position: absolute;
    top: 20px;
    left: 20px;
    right: 250px;
}
#panel, #map {
    /*
    bottom: 20px;
    */
    height: 400px;
}

.leaflet-container {
    background: #f1eee8 !important;
    cursor: auto !important;
}

.content {
    margin-left: 10px;
    padding: 0px 10px;
}

table td {
    padding-left: 5px;
}

table tr td:first-child {
    padding-left: 0;
}

.entity_title {
    padding-bottom: 3px;
    font-weight: bold;
}

.hidden {
    display: none;
}
#zoomhint, #progress-container {
    position: absolute;
    top: 20px;
    left: 20px;
    margin-top: 10px;
    margin-left: 46px !important; /* 10 + 26 + 10 */
    pointer-events: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    -webkit-user-drag: none;
}
#zoomhint, .progress {
    padding: 7px;
    font-weight: bold;
    background-color: rgba(255, 255, 255, 0.7);
}
#zoomhint {
    padding: 7px;
} 
.progress {
    padding: 5px;
}
.progress-text {
    margin-right: 10px;
    vertical-align: top;
}

h3 {
    font-size: 1.2em; 
    margin: 0em 0 .4em 0;
    font-weight: bold;
    float: left;
    width: 105px;
}

p {
    margin: 1.12em 0;
}
p.subtitle {
    clear: both;
    margin-top: 0;
}
p.auto-filter-info {
    margin: 1.12em 0 0 0;
}
.infotext, a {
    color: #666;
}
ul {
    list-style-type: none; /*disc;*/
    margin: 0.2em 0;
    padding: 0 0 0 0px; /* 20*/
}
div.field {
    margin-left: 1px;
    float: left;
    width: 21px;
}

select#style,button#apply {
    width: 100%;
}
textarea#mapcss {
    width: 97%;
    height: 177px;
    margin-top: 3px;
    font-size: 10px;
    font-family: "Courier New", Courier, monospace;
}

.leaflet-control-zoomslider-body-overlay {
    position: absolute;
    top: 95px; /* 27 + 5 + ((19 - 13 + 1) * 9) */
    height: 72px; /* (13 - 5) * 9 */
    background-color: rgba(255, 255, 255, 0.6);
    width: 100%;
    pointer-events: none;
}

